syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.pulsarRPC.examples.helloworld";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Sends nothing
  rpc SayHelloStreaming (stream HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message User {
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
